tests/ui/fail-simple.rs
fn main() {
    panic!(@); //~ ERROR no rules expected `@`
}
